--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Govardhan P - DevOps Engineer Portfolio</title>
+  <title>Govardhan P - DevOps Engineer Portfolio</title>
     <meta name="description" content="Aspiring AWS DevOps Engineer - Portfolio showcasing cloud infrastructure, automation, and CI/CD expertise" />
     <meta name="author" content="Govardhan P" />
 
@@ -16,6 +16,8 @@
   <meta name="twitter:card" content="summary_large_image" />
   <!-- <meta name="twitter:site" content="@your_twitter" /> -->
   <!-- <meta name="twitter:image" content="https://yourdomain.com/your-og-image.png" /> -->
+  <link rel="icon" type="image/png" href="/uploads/favicon.png" />
+  <!-- Favicon updated to PNG in uploads folder -->
   </head>
 
   <body>
